Fix Railway deployment: Add production TypeScript build
- Add tsconfig.build.json for production builds that emit JavaScript
- Update Railway config to use proper build and start commands
- Fix package.json scripts to compile to dist/ folder
- Backend will now properly compile TypeScript to JavaScript for deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "dev": "bun run --watch index.ts",
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "start:bun": "bun run index.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
