--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -17,7 +17,8 @@
   },
   "include": [
     "index.ts",
-    "src/**/*"
+    "src/**/*",
+    "prisma/generated/client"
   ],
   "exclude": [
     "node_modules",
