--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && npm install && npx tsc -p tsconfig.build.json"
+buildCommand = "cd backend && npm install && npx prisma generate && npx prisma migrate deploy && npx tsc -p tsconfig.build.json"
 
 [deploy]
 startCommand = "cd backend && node dist/index.js"
