--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && npm install && npx prisma generate && npx prisma migrate deploy && npx tsc -p tsconfig.build.json"
+buildCommand = "cd backend && npm install && npx prisma generate && npx tsc -p tsconfig.build.json"
 
 [deploy]
-startCommand = "cd backend && node dist/index.js"
+startCommand = "cd backend && npx prisma migrate deploy && node dist/index.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
