--- a/backend/package.json
+++ b/backend/package.json
@@ -29,9 +29,9 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/bun": "^1.2.17",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^1.4.13",
+    "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
@@ -45,10 +45,10 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.1",
+    "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.3",
     "uuid": "^11.1.0",
