--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "cd backend && npm install && npx prisma generate && npx tsc -p tsconfig.build.json"
 
 [deploy]
-startCommand = "cd backend && npx prisma migrate deploy && node dist/index.js"
+startCommand = "cd backend && node dist/index.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
