--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,10 @@
 [build]
+nixPacks = true
 builder = "nixpacks"
-buildCommand = "cd backend && npm install && npx prisma generate && npx tsc -p tsconfig.build.json"
+buildCommand = "cd backend && npm install"
 
 [deploy]
-startCommand = "cd backend && node dist/index.js"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
-
-[env]
-NODE_ENV = "production" 
+healthcheckPath = "/api/health"
+healthcheckTimeout = 300
+restartPolicyType = "on_failure"
+startCommand = "cd backend && npx prisma migrate deploy && npm start" 
