Migrate from Railway to Vercel - remove Railway files, add Vercel configuration, update package.json and documentation

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,14 +8,14 @@
     "start": "node dist/index.js",
     "start:bun": "bun run index.ts",
     "build": "tsc -p tsconfig.build.json",
+    "vercel-build": "npm run db:generate && npm run build",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma migrate deploy",
     "db:reset": "prisma migrate reset",
     "db:seed": "bun run prisma/seed.ts",
     "db:studio": "prisma studio",
-    "type-check": "tsc --noEmit",
-    "postinstall": "prisma generate && npm run build"
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "wedding",
