--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
+    "build:netlify": "npm run db:generate && npm run build:frontend",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "clean": "rm -rf node_modules frontend/node_modules backend/node_modules frontend/dist backend/dist",
     "db:generate": "cd backend && npm run db:generate",
     "db:migrate": "cd backend && npm run db:migrate",
-    "db:studio": "cd backend && npm run db:studio"
+    "db:migrate:prod": "cd backend && npm run db:migrate:prod",
+    "db:studio": "cd backend && npm run db:studio",
+    "generate-secrets": "node generate-secrets.js"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
