--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+
+# Deployment secrets
+deploy-secrets.txt
 
 # Build outputs
 dist/
