--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,8 @@ PASSWORD_RESET_SECRET="your-password-reset-secret"
 CLIENT_URL="your-netlify-site-url"
 
 # AWS S3 Configuration
-AWS_ACCESS_KEY_ID="your-aws-access-key"
-AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
+S3_ACCESS_KEY_ID="your-aws-access-key"
+S3_SECRET_ACCESS_KEY="your-aws-secret-key"
 AWS_REGION="us-east-1"
 AWS_S3_BUCKET_NAME="your-s3-bucket-name"
 
