--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ CLIENT_URL="your-netlify-site-url"
 # AWS S3 Configuration
 S3_ACCESS_KEY_ID="your-aws-access-key"
 S3_SECRET_ACCESS_KEY="your-aws-secret-key"
-AWS_REGION="us-east-1"
+S3_REGION="us-east-1"
 AWS_S3_BUCKET_NAME="your-s3-bucket-name"
 
 # Frontend Environment Variables (for Netlify)
