Fix: Resolve TypeScript build errors for Netlify
- Add @types/react and @types/react-dom to root package.json
- Update netlify.toml build command to use npm ci
- Improve build:netlify script to install workspace dependencies
- Ensures all TypeScript declarations are available during build
- Fixes missing React type definitions error

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  # Build command for the frontend
-  command = "npm run build:frontend"
+  # Build command for the frontend (install dependencies first)
+  command = "npm ci && npm run build:netlify"
   # Publish directory for the frontend
   publish = "frontend/dist"
   # Functions directory
