--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run build:backend && npm run build:frontend",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "build:netlify": "npm run db:generate && npm run build:frontend",
+    "build:netlify": "npm install --workspaces && npm run db:generate && npm run build:frontend",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "clean": "rm -rf node_modules frontend/node_modules backend/node_modules frontend/dist backend/dist",
     "db:generate": "cd backend && npm run db:generate",
@@ -24,7 +24,10 @@
     "generate-secrets": "node generate-secrets.js"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "typescript": "~5.8.3"
   },
   "dependencies": {
     "@geoapify/geocoder-autocomplete": "^2.1.0",
