running on local

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,36 @@
-# Database
-DATABASE_URL="postgresql://username:password@endpoint.neon.tech/dbname?sslmode=require&channel_binding=require"
+# Database (Local PostgreSQL)
+DATABASE_URL="postgresql://username:password@localhost:5432/dbname"
 
 # JWT Authentication
 JWT_SECRET="your-jwt-secret-here"
 JWT_REFRESH_SECRET="your-jwt-refresh-secret-here"
 
-# Server Configuration
-NODE_ENV="production"
+# Email Configuration (Gmail SMTP)
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=587
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-app-password"
+FROM_EMAIL="your-email@gmail.com"
+FROM_NAME="Your App Name"
 
-# Email Verification (Optional - not needed for deployment)
+# Server Configuration
+PORT=5000
+NODE_ENV="development"
+FRONTEND_URL="http://localhost:5173"
+
+# Email Verification
 EMAIL_VERIFICATION_SECRET="your-email-verification-secret"
 PASSWORD_RESET_SECRET="your-password-reset-secret"
 
 # Client URL for verification links
-CLIENT_URL="your-netlify-site-url"
+CLIENT_URL="http://localhost:5173"
 
-# AWS S3 Configuration
-S3_ACCESS_KEY_ID="your-aws-access-key"
-S3_SECRET_ACCESS_KEY="your-aws-secret-key"
-S3_REGION="us-east-1"
+# AWS S3 Configuration (Optional for local development)
+AWS_ACCESS_KEY_ID="your-aws-access-key"
+AWS_SECRET_ACCESS_KEY="your-aws-secret-key"
+AWS_REGION="us-east-1"
 AWS_S3_BUCKET_NAME="your-s3-bucket-name"
 
-# Frontend Environment Variables (for Netlify)
-VITE_API_URL="/api"
-VITE_GEOAPIFY_API_KEY="40a230ecfd9e4d15ad2b61afe78752da" 
+# Frontend Environment Variables
+VITE_API_URL="http://localhost:5000"
+VITE_GEOAPIFY_API_KEY="your-geoapify-api-key" 
