--- a/backend/package.json
+++ b/backend/package.json
@@ -40,9 +40,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.839.0",
     "@aws-sdk/s3-request-presigner": "^3.839.0",
-
     "@prisma/client": "^6.10.1",
     "bcryptjs": "^3.0.2",
+    "bun": "^1.2.17",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^4.19.2",
@@ -51,7 +51,6 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^7.0.3",
-
     "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
